@@ -1,3 +1,9 @@
+2009-08-31 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (genAnd, genOr): applied patch for bug 2719592,
+	  thanks to Robert Larice
+	* support/regression/tests/bug2719592.c: new, added
+
 2009-09-02 Borut Razem <borut.razem AT siol.net>
 
 	* support/regression/ports/gbz80/spec.mk,
